Closed Bug 594296 Opened 14 years ago Closed 14 years ago

Fix the implementation of Assembler::asm_cmov() in the SH4 backend

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect)

Other
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: cedric.vincent, Unassigned)

References

Details

(Whiteboard: fixed-in-nanojit,fixed-in-tracemonkey,fixed-in-tamarin)

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.2.8) Gecko/20100723 Firefox/3.6.8
Build Identifier: 

The previous implementation is broken.

Reproducible: Always

Steps to Reproduce:
1. build NanoJIT/SH4
2. run "./bin/lirasm --execute ../lirasm/tests/cmov.in"

Actual Results:  
Output is: 208950492


Expected Results:  
Output is: 13
Depends on: 568486
Attachment #472978 - Flags: superreview?(edwsmith)
Attachment #472978 - Flags: review?(rreitmai)
Attachment #472978 - Flags: review?(nnethercote)
Attachment #472978 - Flags: review?(edwsmith)
Attachment #472978 - Flags: review?(nnethercote) → review+
Attachment #472978 - Flags: review?(edwsmith)
Attachment #472978 - Flags: superreview?(edwsmith) → superreview+
Attachment #472978 - Flags: review?(rreitmai) → review+
Blocks: 602390
Please, could you apply this change? Thanks in advance.
http://hg.mozilla.org/tracemonkey/rev/cf37bdb2b794
Whiteboard: fixed-in-nanojit → fixed-in-nanojit, fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/cf37bdb2b794
Status: UNCONFIRMED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
changeset: 5592:0ca95602f2f7
user:      Cédric VINCENT <cedric.vincent>
summary:   Bug 594296 - Fix the implementation of Assembler::asm_cmov() in the SH4 backend (r=nnethercote r=rreitmai sr=edwsmith)

http://hg.mozilla.org/tamarin-redux/rev/0ca95602f2f7
Whiteboard: fixed-in-nanojit, fixed-in-tracemonkey → fixed-in-nanojit,fixed-in-tracemonkey,fixed-in-tamarin
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: